2010-12-08  Arnaud Lacombe  <lacombar@gmail.com>

	* ar.c (long_options): Add target.
	(decode_options): Handle the --target option.
	(open_inarch): Check for plugin's target, default to --target
	(replace_members): Use generic `target'.

	* ar.c (operation): New global variable.
	(show_version): Likewise.
	(show_help): Likewise.
	(long_options): Likewise.
	(usage): Fix help string argument order.
	(decode_options): New.
	(ranlib_main): Use getopt_long.
	(main): Use decode_options.

	* ar.c (main): Split ranlib path.
	(ranlib_usage): New
	(ranlib_main): New

2010-12-03  Doug Evans  <dje@google.com>

	* dwarf.c: #include "bfd_stdint.h".
	(do_gdb_index): New global.
	(display_gdb_index): New function.
	(dwarf_select_sections_by_names) Add "gdb_index".
	(dwarf_select_sections_all): Set do_gdb_index.
	(debug_displays): Add .gdb_index.
	* dwarf.h (do_gdb_index): Declare.
	* objdump.c (usage): Add gdb_index.
	* readelf.c (usage): Add gdb_index.
	(process_section_headers): Process ".gdb_index".
	* doc/binutils.texi (readelf): Document gdb_index dump.
	(objdump): Ditto.

2010-12-01  Kai Tietz  <kai.tietz@onevision.com>

	PR binutils/11065
	* dlltool.c (dll_name_set_by_exp_name): New variable.
	(def_name): Allow setting of dll_name by .def file.
	(def_library): Likewise.
	(main): Set dll_name_set_by_exp_name, if dll_name is
	set indirect by exp_name.

2010-11-26  Alan Modra  <amodra@gmail.com>

	* dwarf.c (decode_location_expression, display_debug_frames): Move
	code handling DW_EH_PE_pcrel into..
	(get_encoded_value): ..here.

2010-11-26  Alan Modra  <amodra@gmail.com>

	* po/ja.po: Update.

2010-11-25  Alan Modra  <amodra@gmail.com>

	* po/bg.po: Update.
	* po/es.po: Update.
	* po/fi.po: Update.
	* po/ja.po: Update.
	* po/ru.po: Update.
	* po/zh_CN.po: Update.

2010-11-21  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/12235
	* elfcomm.c: New.
	* elfcomm.h: Likewise.

	* Makefile.am (HFILES): Add elfcomm.h.
	(CFILES): Add elfcomm.c.
	(ELFLIBS): New.